[package]
name = "mtd-vat-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool to query & submit UK VAT returns"
repository = "https://github.com/alexheretic/mtd-vat-cli"
keywords = ["mtd", "vat"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "mtd-vat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
axum = "0.5.15"
clap = { version = "3.2", features = ["derive", "env"] }
console = "0.15.1"
dirs = "4.0.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
webbrowser = "0.7.1"

[features]
default = []

# Use sandbox urls for testing
sandbox = []

[profile.release]
lto = true
opt-level = "s"
strip = true
