[package]
name = "mtd-vat-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool to query & submit UK VAT returns"
repository = "https://github.com/alexheretic/mtd-vat-cli"
keywords = ["mtd", "vat"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "mtd-vat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.57"
axum = "0.6"
blake3 = "1.3.1"
chrono = "0.4.22"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
console = "0.15.1"
local-ip-address = "0.5"
mac_address = "1.1.3"
os_info = "3.5.0"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
webbrowser = "0.8"
whoami = "1.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
board_id = "0.1.0"

[features]
default = []

# Use sandbox urls for testing
sandbox = []

[profile.release]
lto = true
opt-level = "s"
strip = true
